--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       font-family: 'Segoe UI', cursive, sans-serif;
       text-align: center;
       color: #fff;
-      background: #111;
+      background: #d16a8c; /* darker pink background */
       overflow-x: hidden;
     }
 
@@ -85,7 +85,7 @@
       max-width: 900px;
       margin: 50px auto;
       padding: 40px 30px;
-      background: rgba(255, 182, 193, 0.85); /* soft pink */
+      background: rgba(255, 182, 193, 0.85); /* lighter pink card */
       border-radius: 25px; /* rounded corners */
       box-shadow: 0 0 25px rgba(255, 182, 193, 0.6); /* soft glow/shadow */
       font-size: 1.2rem;
